src/snapshots/len__test__1 + 2.snap
---
source: src/test.rs
expression: parser().parse(&input)
---
ParseResult {
    output: Some(
        FunctionCall(
            FunctionCall {
                function: FunctionCall(
                    FunctionCall {
                        function: Identifier(
                            Identifier {
                                name: "+",
                            },
                        ),
                        argument: Literal(
                            Integer(
                                1,
                            ),
                        ),
                    },
                ),
                argument: Literal(
                    Integer(
                        2,
                    ),
                ),
            },
        ),
    ),
    errs: [],
}
