src/snapshots/len__test__lexer-2.snap
---
source: src/test.rs
expression: "lexer().parse(r#\"== !=\"#)"
---
ParseResult {
    output: Some(
        [
            Ident(
                "==",
            ),
            Ident(
                "!=",
            ),
        ],
    ),
    errs: [],
}
