src/snapshots/len__test__map (x y) bar.snap
---
source: src/test.rs
expression: parser().parse(&input)
---
ParseResult {
    output: Some(
        FunctionCall(
            FunctionCall {
                function: FunctionCall(
                    FunctionCall {
                        function: Identifier(
                            Identifier {
                                name: "map",
                            },
                        ),
                        argument: FunctionCall(
                            FunctionCall {
                                function: Identifier(
                                    Identifier {
                                        name: "x",
                                    },
                                ),
                                argument: Identifier(
                                    Identifier {
                                        name: "y",
                                    },
                                ),
                            },
                        ),
                    },
                ),
                argument: Identifier(
                    Identifier {
                        name: "bar",
                    },
                ),
            },
        ),
    ),
    errs: [],
}
