src/snapshots/len__test__map foo bar.snap
---
source: src/test.rs
expression: parser().parse(&input)
---
ParseResult {
    output: Some(
        FunctionCall(
            FunctionCall {
                function: FunctionCall(
                    FunctionCall {
                        function: Identifier(
                            Identifier {
                                name: "map",
                            },
                        ),
                        argument: Identifier(
                            Identifier {
                                name: "foo",
                            },
                        ),
                    },
                ),
                argument: Identifier(
                    Identifier {
                        name: "bar",
                    },
                ),
            },
        ),
    ),
    errs: [],
}
