src/snapshots/len__test__parser.snap
---
source: src/test.rs
expression: parser().parse(&tokens)
---
ParseResult {
    output: Some(
        Binary {
            op: "==",
            left: Binary {
                op: "+",
                left: Binary {
                    op: "+",
                    left: Number(
                        1,
                    ),
                    right: Binary {
                        op: "*",
                        left: Number(
                            2,
                        ),
                        right: Number(
                            3,
                        ),
                    },
                },
                right: Number(
                    1,
                ),
            },
            right: Number(
                1,
            ),
        },
    ),
    errs: [],
}
