src/snapshots/len__test__unicode_ident-2.snap
---
source: src/test.rs
expression: "unicode_ident().padded().parse(\" abc \")"
---
ParseResult {
    output: Some(
        "abc",
    ),
    errs: [],
}
