src/snapshots/len__test__unicode_ident-3.snap
---
source: src/test.rs
expression: "unicode_ident().parse(\" \")"
---
ParseResult {
    output: None,
    errs: [
        EmptyErr(
            (),
        ),
    ],
}
