src/snapshots/len__test__unicode_ident-4.snap
---
source: src/test.rs
expression: "unicode_ident().padded().parse(\" ( ) \")"
---
ParseResult {
    output: None,
    errs: [
        EmptyErr(
            (),
        ),
    ],
}
