src/snapshots/len__test__unicode_ident.snap
---
source: src/test.rs
expression: "unicode_ident().padded().parse(\" + \")"
---
ParseResult {
    output: Some(
        "+",
    ),
    errs: [],
}
